; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/accel/extr_bma180.c_bma250_chip_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/accel/extr_bma180.c_bma250_chip_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bma180_data = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@BMA250_INT_MAP_REG = common dso_local global i32 0, align 4
@BMA250_INT1_DATA_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"failed to config the chip\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bma180_data*)* @bma250_chip_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bma250_chip_config(%struct.bma180_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bma180_data*, align 8
  %4 = alloca i32, align 4
  store %struct.bma180_data* %0, %struct.bma180_data** %3, align 8
  %5 = load %struct.bma180_data*, %struct.bma180_data** %3, align 8
  %6 = call i32 @bma180_chip_init(%struct.bma180_data* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %31

10:                                               ; preds = %1
  %11 = load %struct.bma180_data*, %struct.bma180_data** %3, align 8
  %12 = call i32 @bma180_set_bw(%struct.bma180_data* %11, i32 16)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  br label %31

16:                                               ; preds = %10
  %17 = load %struct.bma180_data*, %struct.bma180_data** %3, align 8
  %18 = call i32 @bma180_set_scale(%struct.bma180_data* %17, i32 38344)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %16
  br label %31

22:                                               ; preds = %16
  %23 = load %struct.bma180_data*, %struct.bma180_data** %3, align 8
  %24 = load i32, i32* @BMA250_INT_MAP_REG, align 4
  %25 = load i32, i32* @BMA250_INT1_DATA_MASK, align 4
  %26 = call i32 @bma180_set_bits(%struct.bma180_data* %23, i32 %24, i32 %25, i32 1)
  store i32 %26, i32* %4, align 4
  %27 = load i32, i32* %4, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %22
  br label %31

30:                                               ; preds = %22
  store i32 0, i32* %2, align 4
  br label %38

31:                                               ; preds = %29, %21, %15, %9
  %32 = load %struct.bma180_data*, %struct.bma180_data** %3, align 8
  %33 = getelementptr inbounds %struct.bma180_data, %struct.bma180_data* %32, i32 0, i32 0
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = call i32 @dev_err(i32* %35, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %37 = load i32, i32* %4, align 4
  store i32 %37, i32* %2, align 4
  br label %38

38:                                               ; preds = %31, %30
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i32 @bma180_chip_init(%struct.bma180_data*) #1

declare dso_local i32 @bma180_set_bw(%struct.bma180_data*, i32) #1

declare dso_local i32 @bma180_set_scale(%struct.bma180_data*, i32) #1

declare dso_local i32 @bma180_set_bits(%struct.bma180_data*, i32, i32, i32) #1

declare dso_local i32 @dev_err(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
